@@ -1,6 +1,10 @@
 Version 0.22.0
 2014-MM-DD
 
+ Enhancements:
+
+ - Cache buster does not invalidate renderer if it is numeric and smaller than cached buster.
+
 Version 0.21.0
 2014-05-07
 
